# vibe

./: .gitignore  README.md  pyproject.toml
docs/: DISTRIBUTION.md
src/vibe/: agent_selector.py  agents.py  args.py  cli.py  config.py  gitops.py  merge_cli.py  model_selector.py  openai_client.py  output.py  prompt.py  review_cli.py  rules_cli.py  run.py  tmux.py  worktree.py
tests/: conftest.py  test_agents.py  test_cli_selection.py  test_integration.py
vibe/: __init__.py  cli.py
vibe-rules/rules/: base.md
vibe-rules/rules/agents/: claude.md  codex.md
vibe-rules/rules/languages/: python.md  rust.md
vibe-rules/rules/topics/: agents-guide.md  apis.md  claude-code-installation.md  command-summary.md  common-issues.md  core-concepts.md  deployment-strategy.md  directory-structure.md  expression-syntax.md  feature-development-process.md  frontend.md  handling-async-reactivity.md  install-native-binary.md  path-configuration-added-to-bashrc.md  running-tests.md  separation-of-concerns-ui-vs-business-logic.md  server-details.md  sse-navigation-gotcha.md  test-patterns-for-datastar.md  test-patterns.md  testing.md  the-5-sse-operations-server-client.md  version-compatibility.md  what-to-test.md  why-this-matters.md  writing-ui-tests.md
vibe-rules/rules/workflows/: dio-review.md  duo.md
